--- a/package.json
+++ b/package.json
@@ -1,36 +1,26 @@
 {
-  "name": "bep-007-nfa",
+  "name": "bep007-contracts",
   "version": "1.0.0",
-  "description": "BEP-007 Non-Fungible Agent Token Standard",
+  "description": "BEP-007 Non-Fungible Agent (NFA) Token Standard",
   "main": "index.js",
   "scripts": {
-    "compile": "npx hardhat compile",
-    "test": "npx hardhat test",
-    "deploy": "npx hardhat run scripts/deploy.js --network testnet"
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "deploy:testnet": "hardhat run scripts/deploy.js --network bscTestnet",
+    "deploy:mainnet": "hardhat run scripts/deploy.js --network bscMainnet"
   },
   "keywords": [
-    "BNB",
-    "BEP-007",
-    "NFT",
-    "agent",
-    "autonomous"
+    "blockchain",
+    "smart-contracts",
+    "nft",
+    "agents",
+    "bep007",
+    "bnb-chain",
+    "bsc"
   ],
-  "author": "",
+  "author": "BEP-007 Team",
   "license": "MIT",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "@openzeppelin/hardhat-upgrades": "^1.28.0",
-    "chai": "^4.3.7",
-    "ethereum-waffle": "^4.0.10",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.17.1"
-  },
-  "dependencies": {
-    "@chainlink/contracts": "^0.6.1",
-    "@openzeppelin/contracts": "^4.9.3",
-    "@openzeppelin/contracts-upgradeable": "^4.9.3",
-    "dotenv": "^16.3.1"
+    "hardhat": "^2.12.4"
   }
 }
