--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.0",
-    "chai": "^4.3.4",
-    "dotenv": "^16.0.0",
-    "ethereum-waffle": "^3.4.0",
+    "@chainlink/contracts": "^1.4.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^4.9.6",
+    "@openzeppelin/contracts-upgradeable": "^4.9.6",
+    "chai": "^5.2.0",
+    "dotenv": "^16.5.0",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.6.0",
-    "hardhat": "^2.9.0",
-    "prettier": "^2.5.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solhint": "^3.3.6"
+    "hardhat": "^2.24.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-solidity": "^2.0.0",
+    "solhint": "^5.1.0"
   }
 }
