--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.6.0",
     "hardhat": "^2.24.2",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.10",
     "prettier": "^3.5.3",
     "prettier-plugin-solidity": "^2.0.0",
-    "solhint": "^5.1.0"
+    "solhint": "^5.1.0",
+    "solidity-coverage": "^0.8.13"
   }
 }
