--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/dependency-review-action@v4
         with:
           fail-on-severity: high
-          allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC, BSD-2-Clause
+          allow-licenses: MIT, Apache-2.0, BSD-3-Clause, ISC, LGPL-3.0
           deny-licenses: GPL-2.0, GPL-3.0
           comment-summary-in-pr: always
 
