--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -69,7 +69,7 @@ jobs:
             (MIT OR CC0-1.0), (MIT OR Apache-2.0),
             (MIT AND BSD-3-Clause), (Apache-2.0 WITH LLVM-exception),
             (AFL-2.1 OR BSD-3-Clause), (BSD-2-Clause OR MIT OR Apache-2.0),
-            MIT AND OFL-1.1
+            MIT AND OFL-1.1, LicenseRef-scancode-unknown-license-reference AND MPL-2.0
           comment-summary-in-pr: always
 
   update-dependencies:
