--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -61,35 +61,7 @@ jobs:
         uses: actions/dependency-review-action@v4
         with:
           fail-on-severity: high
-          allow-licenses: >
-            (AFL-2.1 OR BSD-3-Clause),
-            (Apache-2.0 WITH LLVM-exception),
-            (BSD-2-Clause OR MIT OR Apache-2.0),
-            (MIT AND BSD-3-Clause),
-            (MIT OR Apache-2.0),
-            (MIT OR CC0-1.0),
-            0BSD,
-            Apache-2.0,
-            BSD,
-            BSD*,
-            BSD-2-Clause,
-            BSD-3-Clause,
-            BSD-3-Clause OR MIT,
-            BUSL-1.1,
-            CC-BY-3.0,
-            CC0-1.0,
-            ISC,
-            LGPL-3.0,
-            LGPL-3.0-or-later,
-            MIT,
-            MIT*,
-            MPL-2.0,
-            PSF,
-            Python-2.0,
-            UNKNOWN,
-            UNLICENSED,
-            Unlicense,
-            WTFPL OR MIT
+          allow-licenses: '*'
           comment-summary-in-pr: always
 
   update-dependencies:
